[gd_scene load_steps=5 format=3 uid="uid://bq51gdk13v4ok"]

[ext_resource type="Script" uid="uid://bq7lp6os3csgp" path="res://Script/Core/GameProgress.gd" id="1_sigod"]
[ext_resource type="PackedScene" uid="uid://bccudboi7o4ro" path="res://Scene/Core/NoteLoader.tscn" id="2_ivhuv"]
[ext_resource type="PackedScene" uid="uid://cvkwujsai5uxg" path="res://Scene/Core/InputProcesser.tscn" id="3_ejccq"]
[ext_resource type="PackedScene" uid="uid://cnmebfsbgqj8b" path="res://Scene/GameManager/TimeManager.tscn" id="3_vxtn3"]

[node name="GameProgress" type="Node2D"]
script = ExtResource("1_sigod")

[node name="NoteLoader" parent="." instance=ExtResource("2_ivhuv")]

[node name="TimeManager" parent="." instance=ExtResource("3_vxtn3")]

[node name="InputProcesser" parent="." instance=ExtResource("3_ejccq")]

[node name="AudioSystem" type="AudioStreamPlayer" parent="."]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="ProgressBar" type="ProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 24.0
grow_horizontal = 2

[node name="Track" type="Node2D" parent="."]

[node name="Column1" type="Node2D" parent="Track"]

[node name="NotePool" type="Node2D" parent="Track/Column1"]

[node name="Column2" type="Node2D" parent="Track"]

[node name="NotePool" type="Node2D" parent="Track/Column2"]

[node name="Column3" type="Node2D" parent="Track"]

[node name="NotePool" type="Node2D" parent="Track/Column3"]

[node name="Column4" type="Node2D" parent="Track"]

[node name="NotePool" type="Node2D" parent="Track/Column4"]
